--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "title": "angular-sap-html2canvas",
   "name": "angular-sap-html2canvas",
   "description": "node/browserify wrap around html2canvas library",
-  "version": "0.1.1",
+  "version": "0.3.0",
   "engines": {
     "node": ">=0.8.0"
   },
@@ -11,8 +11,7 @@
     "grunt": "0.4.5",
     "grunt-browserify": "3.5.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-uglify": "0.8.0",
-    "grunt-publish": "0.0.5"
+    "grunt-contrib-uglify": "0.8.0"
   },
   "repository": {
     "type": "git",
